force-app/bedrock/lib/scheduler/objects/Scheduler_Job__mdt/Scheduler_Job__mdt.object-meta.xml
<CustomObject>
    <description>Bedrock scheduler job definition.</description>
    <label>Scheduler Job</label>
    <pluralLabel>Scheduler Jobs</pluralLabel>
</CustomObject>