force-app/bedrock/lib/scheduler/objects/Scheduler_Job__mdt/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <label>Apex</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>